--- a/product_detail.html
+++ b/product_detail.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <img id="logo" src="./Smart Store Logo.png">
+                <img id="logo" src="Smart Store Logo.png">
             </div>
             <nav class="nav_links">
                 <ul id="MenuItems">
@@ -23,8 +23,8 @@
                     <li><a href="">Account</a></li>
                 </ul>
             </nav>
-            <img src="./istockphoto-1206806317-612x612 - Copy.jpg" width="40px" height="40px">
-            <img src="./menu icon 2.png" class="menu-icon" onclick="menutoggle()">
+            <img src="istockphoto-1206806317-612x612 - Copy.jpg" width="40px" height="40px">
+            <img src="menu icon 2.png" class="menu-icon" onclick="menutoggle()">
         </div>
    </div>
 
