--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
         <div class="navbar">
             <div class="logo">
-                <img id="logo" src="Smart Store Logo.png">
+                <img id="logo" src="img/Smart Store Logo.png">
             </div>
             <div class="srh">
                 <input type="search" name="search" id="search" placeholder="Search products, brands and categories">
