--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <li><a href="">Account</a></li>
                 </ul>
             </nav>
-            <img src="istockphoto-1206806317-612x612 - Copy.jpg" width="50px" height="50px">
-            <img src="menu icon 2.png" class="menu-icon" onclick="menutoggle()">
+            <img src="C:\Users\Chris PC\Desktop\SmartStore\istockphoto-1206806317-612x612 - Copy.jpg" width="50px" height="50px">
+            <img src="C:\Users\Chris PC\Desktop\SmartStore\menu icon 2.png" class="menu-icon" onclick="menutoggle()">
         </div>
         <div class="row">
             <div class="col-2">
