--- a/product_detail.html
+++ b/product_detail.html
@@ -24,7 +24,7 @@
                 </ul>
             </nav>
             <img src="istockphoto-1206806317-612x612 - Copy.jpg" width="40px" height="40px">
-            <img src="menu icon 2.png" class="menu-icon" onclick="menutoggle()">
+            <img src="img/menu icon 2.png" class="menu-icon" onclick="menutoggle()">
         </div>
    </div>
 
