--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a href="" class="btn">Explore Now &#8594</a>
             </div>
             <div class="col-2">
-                <img src="C:\Users\Chris PC\Desktop\SmartStore\New Background 1.jpg">
+                <img src="img/New Background 1.jpg">
             </div>
         </div> 
     </div>
