--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li><a href="">Account</a></li>
                 </ul>
             </nav>
-            <img src="C:\Users\Chris PC\Desktop\SmartStore\istockphoto-1206806317-612x612 - Copy.jpg" width="50px" height="50px">
+            <img src="img/istockphoto-1206806317-612x612 - Copy.jpg" width="50px" height="50px">
             <img src="C:\Users\Chris PC\Desktop\SmartStore\menu icon 2.png" class="menu-icon" onclick="menutoggle()">
         </div>
         <div class="row">
