--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
     <div class="small-container">
         <div class="row">
             <div class="col-3">
-                <img src="C:\Users\Chris PC\Desktop\SmartStore\Samsung Phone Detailed">
+                <img src="img/Samsung Phone Detailed">
             </div>
             <div class="col-3">
-                <img src="C:\Users\Chris PC\Desktop\SmartStore\ScanDisk USB.jpg">
+                <img src="img/ScanDisk USB.jpg">
             </div>
             <div class="col-3">
-                <img src="C:\Users\Chris PC\Desktop\SmartStore\computer images without Background.jpg">
+                <img src="img/computer images without Background.jpg">
             </div>
         </div>
     </div>
