--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <h2 class="title">Featured Products</h2>
     <div class="row">
         <div class="col-4">
-            <img src="C:\Users\Chris PC\Desktop\SmartStore\CCTV Camera.jpg">
+            <img src="img/CCTV Camera.jpg">
             <h4>CCTV Camera</h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
