--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <p>$2,000.00</p>
         </div>
         <div class="col-4">
-            <img src="C:\Users\Chris PC\Desktop\SmartStore\Game Consoles">
+            <img src="img/Game Consoles">
             <h4>PS4 Handy</h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
