--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <p>$1,000.00</p>
         </div>
         <div class="col-4">
-            <img src="C:\Users\Chris PC\Desktop\SmartStore\Electronic Watches.jpg">
+            <img src="img/Electronic Watches.jpg">
             <h4>Samsung Ultra</h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -104,7 +104,7 @@
             <p>$3,000.00</p>
         </div>
         <div class="col-4">
-            <img src="C:\Users\Chris PC\Desktop\SmartStore\Tablets.jpg">
+            <img src="img/Tablets.jpg">
             <h4>Modern Tablets</h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -119,7 +119,7 @@
     <h2 class="title">Latest Products</h2>
     <div class="row">
         <div class="col-4">
-            <img src="C:\Users\Chris PC\Desktop\SmartStore\Desktops & Workstations.jpg">
+            <img src="img/Desktops & Workstations.jpg">
             <h4>CCTV Camera</h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -131,7 +131,7 @@
             <p>$2,000.00</p>
         </div>
         <div class="col-4">
-            <img src="C:\Users\Chris PC\Desktop\SmartStore\Game Consoles">
+            <img src="img/Game Consoles">
             <h4>PS4 Handy</h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -143,7 +143,7 @@
             <p>$1,000.00</p>
         </div>
         <div class="col-4">
-            <img src="C:\Users\Chris PC\Desktop\SmartStore\Drones.jpg">
+            <img src="img/Drones.jpg">
             <h4>Samsung Ultra</h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -155,7 +155,7 @@
             <p>$3,000.00</p>
         </div>
         <div class="col-4">
-            <img src="C:\Users\Chris PC\Desktop\SmartStore\HeadPhone 1.jpg">
+            <img src="img/HeadPhone 1.jpg">
             <h4>Modern Tablets</h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -169,7 +169,7 @@
     </div>
     <div class="row">
         <div class="col-4">
-            <img src="C:\Users\Chris PC\Desktop\SmartStore\CCTV Camera.jpg">
+            <img src="img/CCTV Camera.jpg">
             <h4>CCTV Camera</h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -181,7 +181,7 @@
             <p>$2,000.00</p>
         </div>
         <div class="col-4">
-            <img src="C:\Users\Chris PC\Desktop\SmartStore\Game Consoles">
+            <img src="img/Game Consoles">
             <h4>PS4 Handy</h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -193,7 +193,7 @@
             <p>$1,000.00</p>
         </div>
         <div class="col-4">
-            <img src="C:\Users\Chris PC\Desktop\SmartStore\iPads & Tablets.jpg">
+            <img src="img/iPads & Tablets.jpg">
             <h4>Samsung Ultra</h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -205,7 +205,7 @@
             <p>$3,000.00</p>
         </div>
         <div class="col-4">
-            <img src="C:\Users\Chris PC\Desktop\SmartStore\Tablets.jpg">
+            <img src="img/Tablets.jpg">
             <h4>Modern Tablets</h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -219,7 +219,7 @@
     </div>
     <div class="row">
         <div class="col-4">
-            <img src="C:\Users\Chris PC\Desktop\SmartStore\CCTV Camera.jpg">
+            <img src="img/CCTV Camera.jpg">
             <h4>CCTV Camera</h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -231,7 +231,7 @@
             <p>$2,000.00</p>
         </div>
         <div class="col-4">
-            <img src="C:\Users\Chris PC\Desktop\SmartStore\Game Consoles">
+            <img src="img/Game Consoles">
             <h4>PS4 Handy</h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -243,7 +243,7 @@
             <p>$1,000.00</p>
         </div>
         <div class="col-4">
-            <img src="C:\Users\Chris PC\Desktop\SmartStore\Recent Samsung.jpg">
+            <img src="img/Recent Samsung.jpg">
             <h4>Samsung Ultra</h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -255,7 +255,7 @@
             <p>$3,000.00</p>
         </div>
         <div class="col-4">
-            <img src="C:\Users\Chris PC\Desktop\SmartStore\Tablets.jpg">
+            <img src="img/Tablets.jpg">
             <h4>Modern Tablets</h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
