--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     <div class="small-container">
         <div class="row">
             <div class="special-offer">
-                <img src="C:\Users\Chris PC\Desktop\SmartStore\Smart Band 4.jpg" width = "80%" class="offer-img">
+                <img src="img/Smart Band 4.jpg" width = "80%" class="offer-img">
             </div>
             <div class="col-2">
                 <p>Exclusively Available on SmartStore</p>
@@ -299,7 +299,7 @@
                     <i class="fa fa-star-half-o"></i>
                     <i class="fa fa-star-o"></i>
                 </div>
-                <img src="C:\Users\Chris PC\Desktop\SmartStore\Benjamin Everett.png" class="user-img">
+                <img src="img/Benjamin Everett.png" class="user-img">
                 <h3>Benjamin Everett</h3>
             </div>
             <div class="col-3">
@@ -312,7 +312,7 @@
                     <i class="fa fa-star-half-o"></i>
                     <i class="fa fa-star-o"></i>
                 </div>
-                <img src="C:\Users\Chris PC\Desktop\SmartStore\CROPPED-IMG_20201014_080858_416.jpg" class="user-img">
+                <img src="img/CROPPED-IMG_20201014_080858_416.jpg" class="user-img">
                 <h3>Jean Davies</h3>
             </div>
             <div class="col-3">
@@ -325,7 +325,7 @@
                     <i class="fa fa-star-half-o"></i>
                     <i class="fa fa-star-o"></i>
                 </div>
-                <img src="C:\Users\Chris PC\Desktop\SmartStore\CROPPED-received_712110169720948.jpeg" class="user-img">
+                <img src="img/CROPPED-received_712110169720948.jpeg" class="user-img">
                 <h3>Lackey Dickerson</h3>
             </div>
         </div>
@@ -336,19 +336,19 @@
     <div class="small-container">
         <div class="row">
             <div class="col-5">
-                <img src="C:\Users\Chris PC\Desktop\SmartStore\google-logo.png">
+                <img src="img/google-logo.png">
             </div>
             <div class="col-5">
-                <img src="C:\Users\Chris PC\Desktop\SmartStore\amazon-logo.png">
+                <img src="img/amazon-logo.png">
             </div>
             <div class="col-5">
-                <img src="C:\Users\Chris PC\Desktop\SmartStore\apple-logo.png">
+                <img src="img/apple-logo.png">
             </div>
             <div class="col-5">
-                <img src="C:\Users\Chris PC\Desktop\SmartStore\cisco-logo.png">
+                <img src="img/cisco-logo.png">
             </div>
             <div class="col-5">
-                <img src="C:\Users\Chris PC\Desktop\SmartStore\samsung-logo.png">
+                <img src="img/samsung-logo.png">
             </div>
         </div>
     </div>
@@ -361,8 +361,8 @@
                 <h3>Download our App</h3>
                 <p>Download the SmartStore App for Android and ios</p>
                 <div class="app-logo">
-                    <img src="C:\Users\Chris PC\Desktop\SmartStore\Google Play 1.png">
-                    <img src="C:\Users\Chris PC\Desktop\SmartStore\App Store 1.jpg">
+                    <img src="img/Google Play 1.png">
+                    <img src="img/App Store 1.jpg">
                 </div>
             </div>
             <div class="footer-col-2">
