--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                 </div>
             </div>
             <div class="footer-col-2">
-                <img id="logo" src="C:\Users\Chris PC\Desktop\SmartStore\Smart Store Logo.png">
+                <img id="logo" src="img/Smart Store Logo.png">
                 <p>Our Purpose Is To Sustainably Make The Pleasure And Benefits Of Smart Gadgets to Many</p>
             </div>
             <div class="footer-col-3">
